--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+html,
+body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+:root {
   line-height: 1.5;
   font-weight: 400;
 
